# template_arch

./: ABOUT.md  Dockerfile  Makefile.example  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
app/: config.py  main.py
app/api/: __init__.py
app/api/docs/: http-client.env.json  v1_roles.http  v1_users.http
app/api/utils/: confluence_kafka_consumer.py  confluence_kafka_producer.py  exceptions.py  health_check.py  loggers.py
app/api/utils/enums/: base_enum.py  env_enum.py  log_level_enum.py
app/api/v1/: __init__.py
app/api/v1/controllers/: role_controller.py  user_controller.py
app/api/v1/crud/: base_crud.py  ping_pong_crud.py  role_crud.py  user_crud.py
app/api/v1/models/: __init__.py  ping_pong_model.py  user_model.py  user_role.py
app/api/v1/schemas/: base_schema.py  kafka_schema.py
app/api/v1/schemas/http/: role_schema.py  user_schema.py
app/api/v1/schemas/kafka/: ping_pong_schema.py
app/api/v1/workers/: abstract_worker.py  ping_pong_worker.py
app/db/: annotated_fields.py  base_class.py  enabled_migration_models.py  session.py
app/tests/: conftest.py  consts.py
app/tests/api/utils/: test_health_check.py  test_migrations.py
app/tests/api/v1/controller/: test_user_controller.py
app/tests/api/v1/workers/: test_ping_pong_worker.py
app/tests/db/: test_session.py
app/tests/utils/: mocks.py  sql_init_conts.py
cli.example/: README.md  cli.py
cli.example/cli/: consume.py  db.py  hello.py  produce.py
migrations/: env.py  script.py.mako
migrations/versions/: 2023-07-10_init.py
